# rlp-encoding

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  config.cfg  rlp.cpp  run_tests.sh  setup.bat  setup.sh  setup_with_tests.bat  setup_with_tests.sh  tests_setup.sh
constants/src/constants/: alias.hpp  elementtype.hpp  enums.hpp  macros.hpp
examples/: CMakeLists.txt
examples/src/: rlp.cpp
include/rlpencoding/constants/: elementtype.hpp
include/rlpencoding/rlp/codec/: rlpdecode.hpp  rlpencode.hpp
include/rlpencoding/rlp/items/: rlplist.hpp  rlpstring.hpp
include/rlpencoding/utils/: generalised.hpp  hex.hpp
main/: CMakeLists.txt  main.cpp
old/: CMakeLists_copy.txt  Makefile
old/src/: main.cpp  rlpdecode.cpp  rlplist.cpp  rlpstring.cpp
old/src/include/: alias.hpp  constants.hpp  rlpstring.hpp  template_utils.hpp
rlp/: CMakeLists.txt
rlp/src/codec/: rlpdecode.cpp  rlpencode.cpp  rlpencode.hpp
rlp/src/items/: rlplist.cpp  rlplist.hpp  rlpstring.cpp  rlpstring.hpp
rlp/src/rlp/codec/: rlpdecode.cpp  rlpdecode.hpp  rlpencode.cpp  rlpencode.hpp
rlp/src/rlp/items/: rlplist.cpp  rlplist.hpp  rlpstring.cpp  rlpstring.hpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp  hello.hpp
scripts/linux/: build.sh  config.sh  tests.sh
scripts/windows/: build.bat  config.bat  tests.bat
src/: main.cpp  rlpdecode.cpp  rlpencode.cpp  rlplist.cpp  rlpstring.cpp  utils.cpp
src/inc/: constants.inc  rlpdecode.hpp  rlpencode.hpp  rlplist.hpp  rlpstring.hpp  template_utils.hpp  utils.hpp
src/include/: rlpdecode.hpp  rlplist.hpp  rlpstring.hpp  utils.hpp
src/rlp/codec/: rlpdecode.cpp  rlpencode.cpp
src/rlp/items/: rlplist.cpp  rlpstring.cpp
src/utils/: CMakeLists.txt  hex.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
tests/src/utils/: CMakeLists.txt  stringtobytestest.cpp
tests/src/utils/generalised/: getbytes.cpp
tests/src/utils/hex/: emptybyte.cpp  floattohex.cpp  hextofloat.cpp  hextointeger.cpp  hextostring.cpp  inserthexprefix.cpp  integertohex.cpp  ishexprefixed.cpp  ishexstring.cpp  isnumeric.cpp  padtoeven.cpp  safeparseint.cpp  stringtobyte.cpp  stringtohex.cpp  striphexprefix.cpp
tests/utils/: CMakeLists.txt
tests/utils/generalised/: getbytes.cpp
tests/utils/hex/: emptybyte.cpp  floattohex.cpp  hextointeger.cpp  inserthexprefix.cpp  ishexstring.cpp  padtoeven.cpp  stringtobyte.cpp  stringtohex.cpp  striphexprefix.cpp
utils/: CMakeLists.txt  constants.hpp  hex.hpp  main.cpp
utils/src/: generalised.hpp  hex.cpp
utils/src/utils/: alias.hpp  enums.hpp  generalised.hpp  hex.cpp  hex.hpp
utils/tests/: CMakeLists.txt  hex.cpp  main.cpp
utils/tests/hex/: integertohex.cpp  ishexprefixed.cpp  stringtobyte.cpp
